--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "autopep8",
     "python-dotenv",
     "pytest",
+    "audioop-lts",
     "dpytest",
     "pre-commit",
     "sqlalchemy",
